scripts/kubernetes/kubernetes-jobmonitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-jobmonitor
  namespace: ort-server
  labels:
    app: ort-server
    component: kubernetes-jobmonitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ort-server
      component: kubernetes-jobmonitor
  template:
    metadata:
      labels:
        app: ort-server
        component: kubernetes-jobmonitor
    spec:
      serviceAccountName: jobmonitor
      volumes:
        - name: ort-core-secret-volume
          configMap:
            name: ort-server-secret-configmap
            items:
              - key: secrets
                path: secrets
      containers:
        - name: kubernetes-jobmonitor
          image: "kubernetes-jobmonitor-image"
          volumeMounts:
            - name: ort-core-secret-volume
              mountPath: /mnt/secrets
              subPath: secrets
              readOnly: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1"
