scripts/kubernetes/orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ort-server-orchestrator
  namespace: ort-server
  labels:
    app: ort-server
    component: orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ort-server
      component: orchestrator
  template:
    metadata:
      labels:
        app: ort-server
        component: orchestrator
    spec:
      serviceAccountName: orchestrator
      volumes:
        - name: ort-orchestrator-config-volume
          configMap: 
            name: ort-orchestrator-config
        - name: ort-orchestrator-config-secrets
          secret: 
            secretName: ort-secrets
      containers:
        - name: ort-server
          image: "ort-server-orchestrator"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: ort-orchestrator-config-volume
              mountPath: /app/resources/application.conf
              subPath: application.conf
              readOnly: true
            - name: ort-orchestrator-config-secrets
              mountPath: /app/resources/secrets.properties
              subPath: secrets.properties
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
