scripts/kubernetes/core.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ort-server
    component: core
  name: ort-server-core
  namespace: ort-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: metrics
      port: 9108
      targetPort: 9108
  selector:
    app: ort-server
    component: core
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ort-server-api-ingress
  namespace: ort-server
spec:
  ingressClassName: nginx
  rules:
    - host: api.ort
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ort-server-core
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ort-server-core
  namespace: ort-server
  labels:
    app: ort-server
    component: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ort-server
      component: core
  template:
    metadata:
      labels:
        app: ort-server
        component: core
    spec:
      volumes:
        - name: ort-core-config-volume
          configMap:
            name: ort-core-config
        - name: ort-core-config-secrets
          secret:
            secretName: ort-secrets
      containers:
        - name: ort-server
          image: core
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: ort-core-config-volume
              mountPath: /app/resources/application.conf
              subPath: application.conf
              readOnly: true
            - name: ort-core-config-secrets
              mountPath: /app/resources/secrets.properties
              subPath: secrets.properties
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
          livenessProbe:
             failureThreshold: 6
             httpGet:
               path: /api/v1/liveness
               port: 8080
               scheme: HTTP
             periodSeconds: 10
             successThreshold: 1
             timeoutSeconds: 5
